# string_view-standalone

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.py
.appveyor/: before-build.cmd  install.cmd  test.cmd
.conan/test_package/: CMakeLists.txt  conanfile.py
.conan/test_package/src/: main.cpp
.github/workflows/: analysis.yml  build-macos.yml  build-ubuntu.yml  build-windows.yml  coverage.yml  scan-build.yml
.travis/: before-script.sh  build.sh  deploy-conan.sh  install.sh
cmake/templates/: PackageConfig.cmake.in
include/bpstd/detail/: string_view.inl
single_include/bpstd/: string_view.hpp
tests/: CMakeLists.txt  Makefile  main.test.cpp
tests/bpstd/: string_view.test.cpp
tools/: generate-single-include.py
